objects/Waiver_SMEs__c.object
<CustomObject>
    <description>Object to hold different set of combination of waiver type/Section/Check being review and email addresses.</description>
    <fields>
        <fullName>Additional_addressees__c</fullName>
        <label>Additional addressees</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_comments__c</fullName>
        <label>Additional comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Check_Being_Reviewed__c</fullName>
        <label>Check Being Reviewed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Section__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Has the SOM Methodology been run to determine if the RTx Checkpoint has been reached?</fullName>
                </value>
                <value>
                    <fullName>Has the Packaging Sign Off Module been run successfully?</fullName>
                </value>
                <value>
                    <fullName>Lockdown File was generated and delivered to ASIC Img/Pkg Team</fullName>
                </value>
                <value>
                    <fullName>Has the Book Usage Report Module been run successfully?</fullName>
                </value>
                <value>
                    <fullName>Has the Final Vim Edits Module been run successfully?</fullName>
                </value>
                <value>
                    <fullName>Was the Additional Signoff Requirements SOM run w/default parameters/options?</fullName>
                </value>
                <value>
                    <fullName>Does your netlist include the correct ECID for your metal level stack?</fullName>
                </value>
                <value>
                    <fullName>The most recent Thermal/Reliability Analysis performed by the IPRB still applies</fullName>
                </value>
                <value>
                    <fullName>Customer Completed Functional Verification</fullName>
                </value>
                <value>
                    <fullName>Have IBM full-function models been used for simulation?</fullName>
                </value>
                <value>
                    <fullName>Have gate level netlists/Smartmodels been used for simulation?</fullName>
                </value>
                <value>
                    <fullName>Has the SOC Application review been completed?</fullName>
                </value>
                <value>
                    <fullName>Was the IBM Power Mgmt Arch using CPM core used on this design?</fullName>
                </value>
                <value>
                    <fullName>Has this design been analyzed to determine the Soft Error Rate?</fullName>
                </value>
                <value>
                    <fullName>RFS/RFQS closed as Final or Win/Final?</fullName>
                </value>
                <value>
                    <fullName>Support Position field in DIW been set to Support?</fullName>
                </value>
                <value>
                    <fullName>Does the RFS/DIW Quote info reflect technical content of design?</fullName>
                </value>
                <value>
                    <fullName>Cu-08 PDT/LMT has approved use of MPU cells?</fullName>
                </value>
                <value>
                    <fullName>Core Documentation reviewed and followed?</fullName>
                </value>
                <value>
                    <fullName>Has the errata for any cores been reviewed and understood?</fullName>
                </value>
                <value>
                    <fullName>Has the design team read and understood all Meth/Lib alerts?</fullName>
                </value>
                <value>
                    <fullName>if an Asynch Clk review is required, was it conducted?</fullName>
                </value>
                <value>
                    <fullName>if an Asynch Clk review was held, were all actions completed?</fullName>
                </value>
                <value>
                    <fullName>if an IBM IP Application review is required, was it conducted?</fullName>
                </value>
                <value>
                    <fullName>if an IP Appl review was held, were all actions completed?</fullName>
                </value>
                <value>
                    <fullName>Have all Tune bits for IBM PLLs been properly configured?</fullName>
                </value>
                <value>
                    <fullName>Was the Chip Pkg Pin Out Report SOM run w/default parameters/options?</fullName>
                </value>
                <value>
                    <fullName>MABIST timing runs completed successfully?</fullName>
                </value>
                <value>
                    <fullName>Has a Zero Wire Load analysis been completed on the Prelim NL?</fullName>
                </value>
                <value>
                    <fullName>Has the ZWL milestone report been reviewed/approved?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_System__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Rit_Type__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Rit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exact_Error_Or_Warning_Statement__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exact Error Or Warning Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Version__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Library Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Control_Number__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Control Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Control_Number__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option Control Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Name__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Permission_Sets__c</fullName>
        <label>Profiles/Permission Sets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Comment__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Comment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Justification__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Justification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <label>Requestor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SME10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME10</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Waiver_SMEs9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Waiver_SMEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Waiver_SMEs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Waiver_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sign Off Module Methodology</fullName>
                </value>
                <value>
                    <fullName>Final Shapes Generation and Checking Section</fullName>
                </value>
                <value>
                    <fullName>Packaging Sign Off Module</fullName>
                </value>
                <value>
                    <fullName>Final Vim Edits Sign Off Module</fullName>
                </value>
                <value>
                    <fullName>Book Usage Report Sign Off Module</fullName>
                </value>
                <value>
                    <fullName>Reliability Data / Additional Signoff Requirements SOM</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / Additional Signoff Requirements SOM</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / Chip Pkg Pin Out Report SOM</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / In System MABIST SOM</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / Internal Scan SOM</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / Boolean Equivalence SOM</fullName>
                </value>
                <value>
                    <fullName>Floorplannning and Layout Section / Floorplanning and PD SOM</fullName>
                </value>
                <value>
                    <fullName>IEEE 1149.1 Standard / 1149.1 BSV SOM</fullName>
                </value>
                <value>
                    <fullName>Library and Rule Checks / Checking SOM</fullName>
                </value>
                <value>
                    <fullName>Technology Checks Section / Checking SOM</fullName>
                </value>
                <value>
                    <fullName>Timing Checks Section / Timing SOM</fullName>
                </value>
                <value>
                    <fullName>3DNoise/ET Coupling / Timing SOM</fullName>
                </value>
                <value>
                    <fullName>Custom Processing Section / Additional Signoff Requirements SOM</fullName>
                </value>
                <value>
                    <fullName>Power Analysis / Power SOM</fullName>
                </value>
                <value>
                    <fullName>Testability and Test Generation Section / Test SOM</fullName>
                </value>
                <value>
                    <fullName>Simultaneous Switching Section / Transient Power Distribution SOM</fullName>
                </value>
                <value>
                    <fullName>Electrical Noise Section / Static IR Drop SOM</fullName>
                </value>
                <value>
                    <fullName>Inactive Waiver</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / In System Test SOM</fullName>
                </value>
                <value>
                    <fullName>Library and Rule Checks Section / Checking SOM</fullName>
                </value>
                <value>
                    <fullName>Chip Data Section / Additional Signoff Requirements SOM</fullName>
                </value>
                <value>
                    <fullName>ROMs and Cores Information Section / ROM personalization SOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tree__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_For_Type__c</fullName>
        <formula>CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Waiver For Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_Need_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Waiver Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiver_Type__c</fullName>
        <label>Waiver Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RTL</fullName>
                </value>
                <value>
                    <fullName>RTM</fullName>
                </value>
                <value>
                    <fullName>RTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Waiver SMEs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Waiver_Type__c</columns>
        <columns>Section__c</columns>
        <columns>Check_Being_Reviewed__c</columns>
        <columns>Profile_Permission_Sets__c</columns>
        <columns>SME1__c</columns>
        <columns>SME2__c</columns>
        <columns>SME3__c</columns>
        <columns>SME4__c</columns>
        <columns>SME5__c</columns>
        <columns>SME6__c</columns>
        <columns>SME7__c</columns>
        <columns>SME8__c</columns>
        <columns>SME9__c</columns>
        <columns>SME10__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WS-{0000}</displayFormat>
        <label>Waiver SMEs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waiver SMEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>